@@ -45,9 +45,8 @@ public final class IgnoreCommandExecutor implements CommandExecutor, TabComplete
             return true;
         }
 
-        final UUID senderUUID = playerSender.getUniqueId();
-        if (this.hasCooldown(playerSender, senderUUID)) {
-            this.sendMessageHasCooldown(playerSender, senderUUID);
+        if (this.hasCooldown(playerSender)) {
+            this.sendMessageHasCooldown(playerSender);
             return true;
         }
 
@@ -76,7 +75,7 @@ public final class IgnoreCommandExecutor implements CommandExecutor, TabComplete
             return true;
         }
 
-        final Player target = Bukkit.getPlayer(args[argsLength]);
+        final Player target = Bukkit.getPlayer(args[argsLength - 1]);
 
         if (target == null || !playerSender.canSee(target) || this.vanishChecker.isVanished(target)) {
             playerSender.sendMessage(this.messages.getPlayerNotFound());
@@ -91,6 +90,7 @@ public final class IgnoreCommandExecutor implements CommandExecutor, TabComplete
         final String targetName = target.getName();
         final UUID targetUUID = target.getUniqueId();
 
+        final UUID senderUUID = playerSender.getUniqueId();
         switch (ignoreType) {
             case CHAT -> this.processChat(playerSender, targetName, senderUUID, targetUUID);
             case PRIVATE -> this.processPrivate(playerSender, targetName, senderUUID, targetUUID);
@@ -100,21 +100,22 @@ public final class IgnoreCommandExecutor implements CommandExecutor, TabComplete
         return true;
     }
 
-    private boolean hasCooldown(final Player playerSender, final UUID senderUUID) {
-        return this.cooldownCollections.hasCooldown(playerSender, senderUUID, "gigachat.bypass.cooldown.ignore", this.cooldownCollections.getIgnoreCooldowns());
+    private boolean hasCooldown(final Player playerSender) {
+        return this.cooldownCollections.hasCooldown(playerSender, "gigachat.bypass.cooldown.ignore", this.cooldownCollections.getIgnoreCooldowns());
     }
 
-    private void sendMessageHasCooldown(final Player playerSender, final UUID senderUUID) {
-        final long timeLeftInMillis = this.cooldownCollections.getIgnoreCooldowns().get(senderUUID) - System.currentTimeMillis();
+    private void sendMessageHasCooldown(final Player sender) {
+        final long timeLeftInMillis = this.cooldownCollections.getIgnoreCooldowns()
+                .get(sender.getUniqueId()) - System.currentTimeMillis();
         final int result = (int) (this.pmValues.getPmCooldown() / 1000 + timeLeftInMillis / 1000);
         final String restTime = Utils.getTime(result);
         final String message = this.messages.getCommandCooldownMessage().replace("{time}", restTime);
-        playerSender.sendMessage(message);
+        sender.sendMessage(message);
     }
 
     private void processChat(final Player sender, final String targetName, final UUID senderUUID, final UUID targetUUID) {
         if (!IgnoreCollections.ignoredChatContains(senderUUID)) {
-            IgnoreCollections.addToIgnoredChat(senderUUID, new ArrayList<>(List.of(targetUUID)));
+            IgnoreCollections.addToIgnoredChat(senderUUID, new HashSet<>(Set.of(targetUUID)));
             sender.sendMessage(this.messages.getChatIgnoreEnabled().replace("{player}", targetName));
             return;
         }
@@ -150,7 +151,7 @@ public final class IgnoreCommandExecutor implements CommandExecutor, TabComplete
 
     private void processPrivate(final Player sender, final String targetName, final UUID senderUUID, final UUID targetUUID) {
         if (!IgnoreCollections.ignoredPrivateContains(senderUUID)) {
-            IgnoreCollections.addToIgnoredPrivate(senderUUID, new ArrayList<>(List.of(targetUUID)));
+            IgnoreCollections.addToIgnoredPrivate(senderUUID, new HashSet<>(Set.of(targetUUID)));
             sender.sendMessage(this.messages.getPrivateIgnoreEnabled().replace("{player}", targetName));
             return;
         }
@@ -185,37 +186,43 @@ public final class IgnoreCommandExecutor implements CommandExecutor, TabComplete
     }
 
     @Override
-    public List<String> onTabComplete(@NotNull CommandSender sender, @NotNull Command command, @NotNull String label, @NotNull String[] args) {
-        if (sender instanceof Player playerSender) {
+    public List<String> onTabComplete(@NotNull CommandSender commandSender, @NotNull Command command, @NotNull String label, @NotNull String[] args) {
+        if (commandSender instanceof final Player sender) {
+            final List<String> completions = new ArrayList<>();
+            final String input = args[args.length - 1];
+            if (sender.hasPermission("gigachat.command.ignore.chat")
+                    && sender.hasPermission("gigachat.command.ignore.private")) {
 
-            final boolean hasChatIgnorePerm = sender.hasPermission("gigachat.command.ignore.chat");
-            final boolean hasPrivateIgnorePerm = sender.hasPermission("gigachat.command.ignore.private");
-
-            if (hasChatIgnorePerm && hasPrivateIgnorePerm) {
                 if (args.length == 1) {
-                    return List.of("chat", "private");
+                    this.first(input, completions);
+                } else if (args.length == 2) {
+                    this.second(sender, input, completions);
                 }
 
-                if (args.length == 2) {
-                    final String input = args[1].toLowerCase();
-                    return this.getPlayer(playerSender, input);
-                }
             } else if (args.length == 1) {
-                final String input = args[0].toLowerCase();
-                return this.getPlayer(playerSender, input);
+                this.second(sender, input, completions);
             }
+
+            return completions;
         }
 
 
-        return Collections.emptyList();
+        return List.of();
     }
 
-    private List<String> getPlayer(final Player sender, final String input) {
+    private void first(final String input, final List<String> completions) {
+        if (Utils.startsWithIgnoreCase(input, "chat")) {
+            completions.add("chat");
+        }
+        if (Utils.startsWithIgnoreCase(input, "private")) {
+            completions.add("private");
+        }
+    }
+
+    private void second(final Player sender, final String input, final List<String> completions) {
         final UUID senderUUID = sender.getUniqueId();
-        final List<String> players = new ArrayList<>();
-        final Collection<? extends Player> onlinePlayers = Bukkit.getOnlinePlayers();
-        for (final Player target : onlinePlayers) {
-            if (sender == target) {
+        for (final Player target : Bukkit.getOnlinePlayers()) {
+            if (target == sender) {
                 continue;
             }
 
@@ -225,12 +232,10 @@ public final class IgnoreCommandExecutor implements CommandExecutor, TabComplete
             }
 
             final String targetName = target.getName();
-            if (targetName.toLowerCase().startsWith(input) && !this.vanishChecker.isVanished(target)) {
-                players.add(targetName);
+            if (Utils.startsWithIgnoreCase(input, targetName) && !this.vanishChecker.isVanished(target)) {
+                completions.add(targetName);
             }
         }
-
-        return players;
     }
 
     private enum IgnoreType {
